# TwitConnect

./: .env  .gitignore  README.md  pnpm-lock.yaml
app/_components/: PostTweet.tsx  Recommended.tsx  RecommendedUser.tsx  Reply.tsx  SearchBar.tsx
app/_types/: Tweet.types.ts  User.types.ts
app/api/image/upload/: route.ts
app/api/tweets/fetch/: route.ts
app/api/tweets/likes/unlike/: route.ts
app/api/tweets/replies/fetch/: route.ts
app/api/user/fetch/: route.ts
app/api/user/follow/: route.ts
backend/: Cargo.toml
backend/migrations/: create_tables.sql
backend/migrations/2023-08-17-163813_create_db/: down.sql  up.sql
backend/src/: connection.rs  main.rs  models.rs  schema.rs
backend/src_old/: db_models.rs  error_handler.rs  handler.rs  main.rs  models.rs  routes.rs  schema.rs
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_components/: ImageUpload.tsx  Navbar.tsx  Provider.tsx  SideBar.tsx  Tweet.tsx
frontend/app/_types/: Like.types.ts  Replies.types.ts
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/tweets/create/: route.ts
frontend/app/api/tweets/likes/fetch/: route.ts
frontend/app/api/tweets/likes/like/: route.ts
frontend/app/api/tweets/replies/create/: route.ts
frontend/app/api/tweets/user/: route.ts
frontend/app/api/user/fetchid/: route.ts
frontend/app/api/user/recommended/: route.ts
frontend/app/api/user/unfollow/: route.ts
frontend/app/home/[user_handle]/: page.tsx
frontend/app/user/[user_id]/: page.tsx
